data/all_generated_tests/raw_wast_tests/nop_IncorrectHandlingofControlFlowAcrossModuleBoundaries_811.wast
;; 2. **Test Description**: Construct a WebAssembly module with an exported function that contains nested control flow structures (e.g., `block`, `loop`) interspersed with `nop` instructions. Ensure that a different module can import and call this function without any control flow issues or stack corruption due to incorrectly handled `nop` instructions.

(assert_invalid
  (module
    (func $test
      (block
        (loop
          (nop)
          (br 1)
        )
        (nop)
      )
      (i32.const 0)
      (return)
    )
    (export "testFunc" (func $test))
    (import "" "importFunc" (func))
  )
  "type mismatch"
)